WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82761
fast/forms/search-event-delay.html is asserting in markAllMisspellingsAndBadGrammarInRanges()
https://bugs.webkit.org/show_bug.cgi?id=82761
Summary
fast/forms/search-event-delay.html is asserting in markAllMisspellingsAndBadG...
Simon Fraser (smfr)
Reported
2012-03-30 11:40:45 PDT
Test is hitting this on the bots: ASSERTION FAILED: unifiedTextCheckerEnabled() /Volumes/Data/slave/lion-intel-debug/build/Source/WebCore/editing/Editor.cpp(1911) : void WebCore::Editor::markAllMisspellingsAndBadGrammarInRanges(TextCheckingTypeMask, WebCore::Range *, WebCore::Range *) 1 0x10ac62b53 WebCore::SpellingCorrectionController::correctionPanelTimerFired(WebCore::Timer<WebCore::SpellingCorrectionController>*) 2 0x10ac66fe3 WebCore::Timer<WebCore::SpellingCorrectionController>::fired() 3 0x10ae6e107 WebCore::ThreadTimers::sharedTimerFiredInternal() 4 0x10ae6de49 WebCore::ThreadTimers::sharedTimerFired() 5 0x10ac34483 _ZN7WebCoreL10timerFiredEP16__CFRunLoopTimerPv 6 0x7fff8bbbec24 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 7 0x7fff8bbbe776 __CFRunLoopDoTimer 8 0x7fff8bb9f001 __CFRunLoopRun 9 0x7fff8bb9e676 CFRunLoopRunSpecific 10 0x7fff89940f9f -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 11 0x1082657b9 _ZL7runTestRKNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEE 12 0x1082640aa _ZL20runTestingServerLoopv 13 0x108263919 dumpRenderTree(int, char const**) 14 0x10826601c main 15 0x10824f364 start
Attachments
Patch
(3.20 KB, patch)
2012-09-18 15:17 PDT
,
Simon Fraser (smfr)
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-03-30 17:40:33 PDT
<
rdar://problem/11159937
>
Simon Fraser (smfr)
Comment 2
2012-03-30 17:44:40 PDT
I'm adding ASSERT(m_frame) to see if that's the issue.
Simon Fraser (smfr)
Comment 3
2012-09-18 14:42:27 PDT
I think DRT and WTR need to reset the 'unifiedTextCheckingEnabled' pref between tests.
Simon Fraser (smfr)
Comment 4
2012-09-18 15:03:21 PDT
***
Bug 96012
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 5
2012-09-18 15:04:10 PDT
***
Bug 85273
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6
2012-09-18 15:17:59 PDT
Created
attachment 164627
[details]
Patch
Ryosuke Niwa
Comment 7
2012-09-18 15:35:49 PDT
Comment on
attachment 164627
[details]
Patch Looks reasonable.
Simon Fraser (smfr)
Comment 8
2012-09-18 15:44:46 PDT
http://trac.webkit.org/changeset/128941
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug