https://bugs.webkit.org/show_bug.cgi?id=82761

Try to narrow down the cause of this assertion by adding
an assertion about m_frame.

* editing/Editor.cpp:
(WebCore::Editor::markAllMisspellingsAndBadGrammarInRanges):

git-svn-id: svn://svn.chromium.org/blink/trunk@112757 bbb929c8-8fbe-4397-9dbb-9b2b20218538